--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python",
+            "name": "Server",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "/Users/hpstock/Documents/Code/NSI/NSIProject/CLIENT/server.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Client",
+            "type": "python",
+            "request": "launch",
+            "program": "/Users/hpstock/Documents/Code/NSI/NSIProject/CLIENT/client.py",
             "console": "integratedTerminal"
         }
     ]
