--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Server",
             "type": "python",
             "request": "launch",
-            "program": "C:/Users/yoann/Desktop/Reposit/NSIProject/CLIENT/server.py",
+            "program": "/Users/hpstock/Documents/Code/NSI/NSIProject/CLIENT/server.py",
             "console": "integratedTerminal"
         },
         {
