--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,14 @@
             "name": "Server",
             "type": "python",
             "request": "launch",
-            "program": "/Users/hpstock/Documents/Code/NSI/NSIProject/CLIENT/server.py",
+            "program": "/CLIENT/server.py",
             "console": "integratedTerminal"
         },
         {
             "name": "Client",
             "type": "python",
             "request": "launch",
-            "program": "C:/Users/yoann/Desktop/Reposit/NSIProject/CLIENT/client.py",
+            "program": "/CLIENT/client.py",
             "console": "integratedTerminal"
         }
     ]
