--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Server",
             "type": "python",
             "request": "launch",
-            "program": "/CLIENT/server.py",
+            "program": "./CLIENT/server.py",
             "console": "integratedTerminal"
         },
         {
